fixing spacing between card

--- a/src/components/Cardhover/Cardhover.css
+++ b/src/components/Cardhover/Cardhover.css
@@ -5,11 +5,6 @@
 }
 
 
-.container{
-
-  
-   
-}
 
 body {
   font-family: "Nunito", sans-serif;
@@ -18,21 +13,14 @@ body {
 
 
 .cardDisplay{
-
-
+  margin: 35px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-   flex: 0 1 24%;
    flex-grow: 3;
-
-
-
-    
 
 }
 .card {
-
 
   margin-right: 10px;
   margin-left: 10px;
